compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_function_takes_labels_into_account.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  wibble(2, n: 1)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(2, n: 1)
  ↑              
}


----- AFTER ACTION

pub fn main() {
  wibble(2, n: 1)
}

fn wibble(int: Int, n int_2: Int) -> a {
  todo
}
