compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_function_works_with_invalid_call.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() -> Bool {\n  wibble(1, True, 2.3)\n}\n"
---
----- BEFORE ACTION

pub fn main() -> Bool {
  wibble(1, True, 2.3)
  ↑                   
}


----- AFTER ACTION

pub fn main() -> Bool {
  wibble(1, True, 2.3)
}

fn wibble(arg_1: Int, arg_2: Bool, arg_3: Float) -> Bool {
  todo
}
