compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_json_encoder.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub type Person {\n  Person(name: String, age: Int, height: Float, is_cool: Bool)\n}\n"
---
----- BEFORE ACTION

pub type Person {
    ↑            
  Person(name: String, age: Int, height: Float, is_cool: Bool)
}


----- AFTER ACTION
import gleam/json

pub type Person {
  Person(name: String, age: Int, height: Float, is_cool: Bool)
}

fn encode_person(person: Person) -> json.Json {
  json.object([
    #("name", json.string(person.name)),
    #("age", json.int(person.age)),
    #("height", json.float(person.height)),
    #("is_cool", json.bool(person.is_cool)),
  ])
}
