compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__generate_json_encoder_for_multi_variant_type.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub type Wibble {\n  Wibble(wibble: Int, next: Wibble)\n  Wobble(wobble: Float, text: String, values: List(Bool))\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
    ↑            
  Wibble(wibble: Int, next: Wibble)
  Wobble(wobble: Float, text: String, values: List(Bool))
}


----- AFTER ACTION
import gleam/json

pub type Wibble {
  Wibble(wibble: Int, next: Wibble)
  Wobble(wobble: Float, text: String, values: List(Bool))
}

fn encode_wibble(wibble: Wibble) -> json.Json {
  case wibble {
    Wibble(wibble:, next:) -> json.object([
      #("type", json.string("wibble")),
      #("wibble", json.int(wibble)),
      #("next", encode_wibble(next)),
    ])
    Wobble(wobble:, text:, values:) -> json.object([
      #("type", json.string("wobble")),
      #("wobble", json.float(wobble)),
      #("text", json.string(text)),
      #("values", json.array(values, json.bool)),
    ])
  }
}
